Fix feedback issues

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -12,29 +12,29 @@
                         <div class="footer-logo ">
                             <h1 class="text-white ">
 
-                               <img src="../../../assets/img/home/mask_group_8.png">
+                                <img src="../../../assets/img/home/mask_group_8.png">
                             </h1>
                             <!-- <img src="assets/img/teladent_2.png " alt="logo "> -->
                         </div>
                         <div class="footer-about-content ">
-                            <p>Indi’s first tele dentistry platform that provides virtual advice and expert opinion for all your
+                            <p>Indi’s first tele dentistry platform that provides virtual advice and expert opinion for
+                                all your
                                 dental problems.</p>
                             <div class="social-icon ">
                                 <ul>
                                     <li>
                                         <a href="# " target="_blank "><i class="fab fa-facebook-f "></i> </a>
                                     </li>
+
                                     <li>
-                                        <a href="# " target="_blank "><i class="fab fa-twitter "></i> </a>
+                                        <a href="# " target="_blank "><i class="fab fa-instagram "></i></a>
                                     </li>
+
                                     <li>
                                         <a href="# " target="_blank "><i class="fab fa-linkedin-in "></i></a>
                                     </li>
                                     <li>
-                                        <a href="# " target="_blank "><i class="fab fa-instagram "></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="# " target="_blank "><i class="fab fa-dribbble "></i> </a>
+                                        <a href="# " target="_blank "><i class="fab fa-twitter "></i> </a>
                                     </li>
                                 </ul>
                             </div>
@@ -51,10 +51,14 @@
                         <h2 class="footer-title ">For Patients</h2>
                         <ul>
                             <!-- <li><a href="search.html ">Search for Clinics</a></li> -->
-                            <li><a (click)="patientRouter('login', 'login-modal', '/web-panel/index', 'user')" href="javascript:void(0); ">Login</a></li>
-                            <li><a (click)="patientRouter('signup', 'login-modal', '/web-panel/index', 'user')" href="javascript:void(0);">Register</a></li>
-                            <li><a (click)="patientRouter('booking', 'login-modal', '/web-panel/online-consultation?limit=10&skip=0', 'user')" href="javascript:void(0);">Booking Appointment</a></li>
-                            <li><a (click)="patientRouter('patientDash', 'login-modal', '/web-panel/patient-panel/patient-dashboard', 'user')" href="javascript:void(0);">Patient Dashboard</a></li>
+                            <li><a (click)="patientRouter('login', 'login-modal', '/web-panel/index', 'user')"
+                                    href="javascript:void(0); ">Login</a></li>
+                            <li><a (click)="patientRouter('signup', 'login-modal', '/web-panel/index', 'user')"
+                                    href="javascript:void(0);">Register</a></li>
+                            <li><a (click)="patientRouter('booking', 'login-modal', '/web-panel/online-consultation?limit=10&skip=0', 'user')"
+                                    href="javascript:void(0);">Book an Appointment</a></li>
+                            <li><a (click)="patientRouter('patientDash', 'login-modal', '/web-panel/patient-panel/patient-dashboard', 'user')"
+                                    href="javascript:void(0);">Patient Dashboard</a></li>
                             <app-login-modal></app-login-modal>
                         </ul>
                     </div>
@@ -68,11 +72,14 @@
                     <div class="footer-widget footer-menu ">
                         <h2 class="footer-title ">For Dentist</h2>
                         <ul>
-                            <li><a (click)="densitRouter('appointment', 'login-modal', '/web-panel/doctors-panel/doctor-appointments', 'onlineDoctors')" href="javascript:void(0);">Appointments</a></li>
-                            <!-- <li><a href="chat.html ">Chat</a></li> -->
-                            <li><a (click)="densitRouter('login', 'login-modal', '/web-panel/index', 'onlineDoctors')" href="javascript:void(0);">Login</a></li>
-                            <li><a (click)="densitRouter('signup', 'login-modal', '/web-panel/index', 'onlineDoctors')" href="javascript:void(0);">Register</a></li>
-                            <li><a (click)="densitRouter('doctorDash', 'login-modal', '/web-panel/doctor-dashboard', 'onlineDoctors')" href="javascript:void(0);">Dentist Dashboard</a></li>
+                            <li><a (click)="densitRouter('login', 'login-modal', '/web-panel/index', 'onlineDoctors')"
+                                    href="javascript:void(0);">Login</a></li>
+                            <li><a (click)="densitRouter('signup', 'login-modal', '/web-panel/index', 'onlineDoctors')"
+                                    href="javascript:void(0);">Register</a></li>
+                            <li><a (click)="densitRouter('appointment', 'login-modal', '/web-panel/doctors-panel/doctor-appointments', 'onlineDoctors')"
+                                    href="javascript:void(0);">Appointments</a></li>
+                            <li><a (click)="densitRouter('doctorDash', 'login-modal', '/web-panel/doctor-dashboard', 'onlineDoctors')"
+                                    href="javascript:void(0);">Dentist Dashboard</a></li>
                         </ul>
                     </div>
                     <!-- /Footer Widget -->
@@ -125,7 +132,8 @@
                         <!-- Copyright Menu -->
                         <div class="copyright-menu ">
                             <ul class="policy-menu ">
-                                <li><a (click)="footerRouter('/web-panel/covid-guidelines')" href="javascript:void(0);">Covid 19 Information</a></li>
+                                <li><a (click)="footerRouter('/web-panel/covid-guidelines')"
+                                        href="javascript:void(0);">Covid 19 Information</a></li>
                                 <li><a href="#">Terms</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
                             </ul>
