--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -30,11 +30,11 @@
                     <div class="row bx">
                         
                             <div class="col-sm-8 p11">
-                                <p class="mt">COIVD-19 guidelines and updates</p>
+                                <p class="mt">COVID-19 guidelines and updates</p>
                                 <p class="st">We are committed to supporting Indian government and stand together to fight against COVID-19</p>
                             </div>
                             <div class="col-sm-4 bgimg2 p17">
-                                <a  href="javascript:void(0);" class="nav-link btn-grad b1">Know More </a>
+                                <a routerLink="/web-panel/covid-guidelines" class="nav-link btn-grad b1">Know More </a>
                             </div>
                         </div>
                    
@@ -47,8 +47,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
-                            <p class="stb">Skip the travel! Take Online Consultation</p>
-                            <p class="stbs">Our online dental consultation lets you get the answers you need from a professional<br>and experienced dentist, without having to attend a physical appointment.</p>
+                            <p class="stb">Skip the travel. Take Online Consultation!</p>
+                            <p class="stbs">Our online dental consultations let you get the answers you need from a professional<br>and experienced dentist, without having to attend a physical appointment.</p>
                         </div>
                     </div>
                     <div class="row text-center nn pd5">
@@ -78,7 +78,7 @@
                         </div>
                         <div class="col-sm-8">
                             <p class="stb">Oral Self Assessment</p>
-                            <p class="stbs">Assess your oral health from the comfort of home by taking a brief online oral assessment test. See the impact of your lifestyle, medical conditions, and your past dental history on the overall health of our mouth.</p>
+                            <p class="stbs">Assess your oral health from the comfort of home by taking a brief online oral assessment test. See the impact of your lifestyle, medical conditions, and your past dental history on the overall health of your mouth.</p>
                             <a  href="javascript:void(0);" class="nav-link btn-grad kk2">Take Oral health test now </a>
                         </div>
                     </div>
@@ -95,8 +95,8 @@
                 <div class="container vertical-tabs">
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="grad-text text-center">About Family Oral Health</h2>
-                            <p class="wow  big  text-center">Have you heard that you should only take care of the teeth you want to keep?
+                            <p class="stb text-center">About Family Oral Health</p>
+                            <p class="stbs text-center txt-line">Have you heard that you should only take care of the teeth you want to keep?
                             It stands true.</p>
                         </div>
 
@@ -124,10 +124,10 @@
 
                                         <div class="col-sm-8 col-xs-12">
 
-                                            <h3 class="grad-text">Child / Kids </h3>
-                                            <p>Good oral practices start with birth of the child. Pediatric dentist is especially trained to
+                                            <h3 class="grad-text">Child</h3>
+                                            <p class="stbs">Good oral practices start with birth of the child. A pediatric dentist is specially trained to
                                                 handle dental problems of a kid.</p>
-                                            <p>Did you know your child’s first dental visit should be at the age
+                                            <p class="stbs">Did you know your child’s first dental visit should be at the age
                                                 of 6 months? Need not worry, its never too late. Book your child first dental online consultation
                                                 now!</p>
                                             <!-- <a href="#" class="btn btn-info">View More</a> -->
@@ -149,10 +149,10 @@
                                         <div class="col-sm-8 col-xs-12">
 
                                             <h3 class="grad-text">Men </h3>
-                                            <p>Good oral health has been linked with longevity studies and surveys have shown that men
+                                            <p class="stbs">Good oral health has been linked with longevity. Studies and surveys have shown that men
                                                 are less likely than women to seek preventive dental care and often neglect their oral health for
                                                 years, visiting dentist only when problem arises.</p>
-                                            <p>When it comes to your oral health, the earlier the better.</p>
+                                            <p class="stbs">When it comes to your oral health, the <span class="txt-bold">Earlier the Better.</span></p>
                                             <!-- <a href="#" class="btn btn-info">View More</a> -->
                                         </div>
 
@@ -170,9 +170,8 @@
                                         <div class="col-sm-8 col-xs-12">
 
                                             <h3 class="grad-text">Women </h3>
-                                            <p>Women have special oral health requirements during the unique phases in their lives.</p>
-                                            <p>Due to the hormonal changes occurring throughout a women’s life, females are more prone to gum diseases and eating disorders.</p>
-                                            <p>Know more about the change to oral health and importance of professional and home care.</p>
+                                            <p class="stbs">Women have special oral health requirements during the unique phases in their lives.Due to the hormonal changes occurring throughout a women’s life, females are more prone to gum diseases and eating disorders.</p>
+                                            <p class="stbs">Know more about the change to oral health and importance of professional and home care.</p>
                                             <!-- <a href="#" class="btn btn-info">View More</a> -->
                                         </div>
 
@@ -192,10 +191,10 @@
                                         <div class="col-sm-8 col-xs-12">
 
                                             <h3 class="grad-text">Senior Citizen </h3>
-                                            <p>Chronic illness in older adults such as diabetes, or heart diseases put seniors at
+                                            <p class="stbs">Chronic illness in older adults such as diabetes, or heart diseases put seniors at
                                                 high risk for dental problems, like toothache, gum diseases and tooth loss.</p>
-                                            <p>Book a consult and
-                                                understand why it’s important to make dental health for seniors a priority and how to help your
+                                            <p class="stbs">Book an consultation and
+                                                understand why it is important to make dental health for seniors a priority and how to help your
                                                 elderly loved ones improve their well-being.</p>
                                             <!-- <a href="#" class="btn btn-info">View More</a> -->
                                         </div>
@@ -216,7 +215,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <p class="stb">Our Services</p>
-                            <p class="stbs w75">Have a dental emergency while you travelling to another city, state, or country? Not satisfied or sure about the treatment advised by your dentist? Worry not! Teladent is available anytime anywhere to help dental care seekers have access to highly qualified board-certified independent dental care professionals.</p>
+                            <p class="stbs w75">Teladent is available anytime anywhere to help dental care seekers have access to highly qualified board-certified independent dental care professionals.</p>
                         </div>
                     </div>
                     <div class="row text-center nn pd5">
@@ -269,66 +268,7 @@
 
                     <!-- Section Header -->
                     <div class="section-header text-center">
-                        <h2 class="grad-text t">Blogs and Articles</h2>
-                        <!-- <div class="row text-sm-left">
-                            <div class="col-sm-3" *ngFor="let blog of webBlogDetails">
-                                <div class="card blog">
-                                    <a href=""><img class="card-img-top" src="assets/img/blog/blog-02.jpg" alt="Card image cap"></a>
-                                    <div class="card-body">
-                                       
-                                        <p><img class="du" src="assets/img/blog/blog-02.jpg"><span class="ltl">DR. Ruby Perrrin</span></p>
-                                        <p class="ttt"><img src="../../../assets/img/home/clock.svg"><span class="timet">{{ blog?.createdAt | date: 'dd MMM yyyy' }}</span></p>
-                                      <h5 class="card-title"><a class="bt" href="">{{blog?.blogTitle}}</a></h5>
-                                      <p class="card-text">{{ blog?.shortDesc }}</p>
-                                      
-                                    </div>
-                                  </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="card blog">
-                                    <a href=""><img class="card-img-top" src="assets/img/blog/blog-02.jpg" alt="Card image cap"></a>
-                                    <div class="card-body">
-                                       
-                                        <p><img class="du" src="assets/img/blog/blog-02.jpg"><span class="ltl">DR. Ruby Perrrin</span></p>
-                                        <p class="ttt"><img src="../../../assets/img/home/clock.svg"><span class="timet">12 Mar 2021</span></p>
-                                      <h5 class="card-title"><a class="bt" href="">Blogs and Articles title</a></h5>
-                                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                                      
-                                    </div>
-                                  </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="card blog">
-                                    <a href=""><img class="card-img-top" src="assets/img/blog/blog-02.jpg" alt="Card image cap"></a>
-                                    <div class="card-body">
-                                       
-                                        <p><img class="du" src="assets/img/blog/blog-02.jpg"><span class="ltl">DR. Ruby Perrrin</span></p>
-                                        <p class="ttt"><img src="../../../assets/img/home/clock.svg"><span class="timet">12 Mar 2021</span></p>
-                                      <h5 class="card-title"><a class="bt" href="">Blogs and Articles title</a></h5>
-                                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                                      
-                                    </div>
-                                  </div>
-                            </div>
-
-                            <div class="col-sm-3">
-                                <div class="card blog">
-                                    <a href=""><img class="card-img-top" src="assets/img/blog/blog-02.jpg" alt="Card image cap"></a>
-                                    <div class="card-body">
-                                       
-                                        <p><img class="du" src="assets/img/blog/blog-02.jpg"><span class="ltl">DR. Ruby Perrrin</span></p>
-                                        <p class="ttt"><img src="../../../assets/img/home/clock.svg"><span class="timet">12 Mar 2021</span></p>
-                                      <h5 class="card-title"><a class="bt" href="">Blogs and Articles title</a></h5>
-                                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                                      
-                                    </div>
-                                  </div>
-                            </div>
-
-                            
-                        </div> -->
+                        <p class="t stb">Blogs and Articles</p>
                     </div>
                     <!-- /Section Header -->
 
@@ -350,7 +290,7 @@
                                         <li><i class="far fa-clock"></i> {{ blog?.createdAt | date: 'dd MMM yyyy' }}</li>
                                     </ul>
                                     <h3 class="blog-title"><a href="javascript:void(0);" (click)="blogRouting(blog?._id)">{{blog?.blogTitle}}</a></h3>
-                                    <p class="mb-0">{{ blog?.shortDesc }}</p>
+                                    <p class="stbs mb-0">{{ blog?.shortDesc }}</p>
                                 </div>
                             </div>
                             <!-- /Blog Post -->
@@ -358,7 +298,7 @@
                         </div>
                     </div>
                     <div class="view-all text-center">
-                        <a href="javsacript:void(0);" (click)="viewBlogRoute()" class="btn btn-info">View All</a>
+                        <a href="javsacript:void(0);" (click)="viewBlogRoute()" class="btn btn-info view-kkh">View All</a>
                     </div>
                 </div>
             </section>
@@ -370,7 +310,7 @@
                             <div class="news-letter-col">
                                 <div class="section-title pb-2">
                                     <h2 class="grad-text">Grab Our Newsletter</h2>
-                                    <p>To receive latest News and Info</p>
+                                    <p class="stbs">To receive latest News, Info and Ebook</p>
                                 </div>
                                 <form>
                                     <div class="d-flex align-items-center">
